<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground01">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:text="@string/license_title"
            style="@style/TextAppearance.AppCompat.Title"
            android:background="@color/colorHeaderBackground"
            android:textColor="@color/colorHeaderText"
            android:textSize="24sp"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:text="@string/license_glide_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Title" />
            <TextView
                android:text="@string/license_glide_github"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web" />
            <TextView
                android:text="@string/license_glide_license"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
